# discord-llm-chatbot

./: .env-ronin  .env-ronin-backup  .env-sample  .env.example  .gitignore  .requirements.txt.swp  AUDIT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DYNAMIC_CONFIG_RELOAD.md  LOGGING.md  MANIFEST.in  MANUAL_TEST_PLAN.md  MIGRATION_GUIDE.md  OPERATIONS.md  README.md  REFACTOR.md  RUNBOOK.md  TASK_LIST.md  TESTPLAN.md  VIDEO_INGESTION.md  ai-prompt  coverage.xml  discord-llm-chatbot.sh  docker-compose.yml  enhanced_context.json  enhanced_context.json.key  kill_hanging_processes.py  main.py  pdf_processor.py  pyproject.toml  pytest.ini  quick_rag_fix.py  rag_versions.json  requirements-new.txt  requirements.in  requirements.runtime.txt  requirements.txt  requirements.txt.bak  (+13 more)
.tmp_chroma_test/: chroma.sqlite3
archive/: main-old.py  main.py
bot/: __init__.py  __main__.py  _create_audio_method.py  action.py  ai_backend.py  brain.py  budget_manager.py  command_parser.py  concurrency_manager.py  config.py  config_reload.py  context.py  contextual_brain.py  controller.py  decision_helpers.py  edit_coalescer.py  enhanced_retry.py  env_utils.py  env_validator.py  events.py  exceptions.py  hear.py  http_client.py  kokoro_direct.py  kokoro_direct.py.bak  kokoro_direct_enhanced.py  kokoro_direct_fixed.py  kokoro_direct_fixed.py.backup  kokoro_direct_fixed.py.bak2  kokoro_direct_fixed.py.broken2  kokoro_direct_fixed.py.broken3  kokoro_direct_fixed.py.clean  kokoro_direct_fixed.py.old  kokoro_direct_fixed_clean.py  kokoro_direct_minimal.py  kokoro_wrapper.py  logger.py  logging_enforcer.py  logs.py  main.py  (+39 more)
bot/commands/: __init__.py  admin_alert_commands.py  config_commands.py  context_commands.py  image_upgrade_commands.py  img_commands.py  memory_cmds.py  rag_commands.py  screenshot_commands.py  search_commands.py  test_cmds.py  tts_cmds.py  video_commands.py  vision_commands.py
bot/config/: media_config.py
bot/core/: background_task_monitor.py  bot-old.py  bot.py  cli.py  client.py  config_validation.py  discord_client_optimizer.py  fast_path_router.py  observability_integration.py  openrouter_client.py  phase_constants.py  phase_timing.py  resource_monitor.py  session_cache.py  slo_monitor.py  startup.py  (+2 more)
configs/: .env.sample  vision_policy.json
docs/: ARCHITECTURE.md  COMMANDS.md  CONFIGURATION.md  DEPLOYMENT.md  DEVELOPMENT.md  DEVNOTES_MENTION_UNIFICATION.md  DEVNOTES_TW_MEDIA.md  DEVNOTES_X_ROUTING.md  ENV_VARS.md  FAQ.md  GLOSSARY.md  IMAGE_GENERATION_GUIDE.md  INSTALLATION.md  MEMORY_AND_CONTEXT.md  MENTION_DEDUPLICATION.md  MIGRATION_GUIDE.md  OCR_SETUP.md  PERFORMANCE_OVERHAUL.md  PERMISSIONS.md  PRIVACY.md  ROADMAP.md  ROUTER_SPEED_OVERHAUL.md  RUNBOOK.md  SECURITY.md  SMART_MEDIA_INGESTION.md  TROUBLESHOOTING.md  TTS_SETUP.md  command_rules.md  tts_ocr_guide.md
examples/: basic_usage.py
kb/: Mein Kampf_ My Struggle - Adolf Hitler.md  faq.txt  features.md
logs/: bot.jsonl  env_drift_guard.jsonl  env_drift_report.json  env_inventory.jsonl  env_registry.jsonl  test.jsonl
prompts/: grok.txt  vl-prompt.txt
requirements/: base.in  dev.in  extras-ml.in  extras-ocr.in  extras-stt.in  extras-time.in
scripts/: build_gruut_patch.sh  convert.py  convert_voices_to_json.py  convert_voices_to_json_fixed.py  diagnose.py  diagnose_tts.py  discord_voice_memo_cli.py  download_official_voices.py  fetch_voices.py  fix_deps.sh  fix_user_profiles.py  fix_voices_json.py  generate_env_var_docs.py  health_check.py  inspect_model.py  install-uv.sh  install.sh  list_available_voices.py  main.py  patch_gruut.py  pdf_processor.py  setup_gruut.py  test_server_memory.py  test_vision_pipeline.py  test_vl_fallback.py  validate_refactor.py  verify_gate.py  verify_routing.py
server_profiles/: 1156692144740892796.json
test_documents/: sample.html  sample.md  sample.txt
tests/: conftest.py  debug_tts.py  test_bot.py  test_bot_scripts.py  test_command_parser.py  test_config_reload.py  test_en_no_tokenizer.py  test_english_ipa_fix.py  test_enhanced.json.key  test_enhanced_multimodal.py  test_env_resolution.py  test_exact_production_error.py  test_flows.py  test_gibberish_detection.py  test_image_only_tweet_flow.py  test_kokoro_direct.py  test_kokoro_direct_fixed.py  test_kokoro_en_ipa.py  test_kokoro_fixes.py  test_media_capability.py  test_media_ingestion.py  test_mention_utils.py  test_metrics_fallback.py  test_metrics_validation.py  test_multiformat_rag.py  test_multimodal_sequential.py  test_novita_image_generation.py  test_observability_integration.py  test_orchestrator_v2.py  test_performance_overhaul.py  test_provider_usage_parser.py  test_rag_defaults.py  test_rag_integration.py  test_rate_limit_metrics.py  test_response_message_compat.py  test_retry_fix.py  test_router.py  test_router_reply_routing.py  test_router_speed_optimization.py  test_router_unroll_logging.py  (+38 more)
tts_cache/: am_michael_1e3ddfe046fa3d0d8ca5f1e314b49efa.opus  am_michael_60ec2e5beef5212d33b8200cda461db4.opus  am_michael_6112a8bd0c6a48f9ffe08fcfca686e19.opus  am_michael_804c3beabc83cde5a59da772c4227d57.opus  am_michael_9470df5c94d366becc72fcddc1b24e2f.opus
tts_service/: Dockerfile  app.py
utils/: __init__.py  botctl  build_env_registry.py  check_screenshot_normalization.py  check_syndication.py  check_voice_imports.py  check_x_api_client.py  debug_rag_pipeline.py  debug_search_pipeline.py  diagnose_retry_profiles.py  download_kokoro_assets.py  env_drift_guard.py  env_inventory.json  env_inventory.py  fetch_ddg_html.py  import_smoke_test.py  json_sanitizer.py  kill_hanging_processes.py  migrate_budget_manager.py  opus.py  quick_rag_fix.py  rebuild_rag_collection.py  search_smoke.py  send_voice_memo.py  test_alert_command.py  test_stt_init.py  test_vision_model_support.py  test_vision_simple.py  test_vision_unified_simple.py  tts_engine_probe.py  tts_phoneme_probe.py  tts_smoke.py  validate_config.py  vision_import_smoke_test.py  vision_orchestrator_smoke.py  wav_stats.py  waveform.py  x_unroll_playwright_probe.py
vision_data/: budgets.json  ledger.jsonl  spend_ledger.jsonl  transactions.jsonl
(+167 files in other folders)
