[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "discord-llm-chatbot"
version = "0.2.0"
description = "A Discord chatbot powered by large language models."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "ffmpeg-python>=0.2.0",
    "kokoro-onnx>=0.4.9",
    "soundfile>=0.13.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["bot*"]
exclude = ["tests*"]
